added more clarification on usage

--- a/mse/XRD_indexing.ipynb
+++ b/mse/XRD_indexing.ipynb
@@ -8,17 +8,22 @@
     "\n",
     "*Author: Enze Chen (University of California, Berkeley)*\n",
     "\n",
-    "This Jupyter notebook is meant expose MSE students with little to no Python experience to a programmatic way of indexing a XRD spectra. It walks through the process step-by-step, so I apologize if it appears quite long. I tried to include ample explanations for the scientific computing techniques and how they relate to math and MSE concepts they might otherwise be more familiar with.\n",
+    "This Jupyter notebook is meant expose MSE students *with little to no Python experience* to a programmatic way of indexing a XRD spectra. It walks through the process step-by-step, so I apologize if it appears quite long. I tried to include ample explanations for the scientific computing techniques and how they relate to math and MSE concepts they might otherwise be more familiar with. If you already know another language like MATLAB or R, you should see some similarities.\n",
     "\n",
-    "## Usage\n",
-    "For pedagogical reasons, there are a few places for the students to fill in their own code in order to make the notebook fully functional. These are delineated with the dashed lines as follows, and you should **only change what's inside**. You don't have to edit the text or code anywhere else.\n",
+    "## How to run this notebook\n",
+    "\n",
+    "If you are viewing this notebook on [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_indexing.ipynb), then all the software is already set up for you (hooray). If you want to run the notebook locally, make sure all the Python libraries in the [`requirements.txt`](https://github.com/enze-chen/learning_modules/blob/master/requirements.txt) file are installed.\n",
+    "\n",
+    "For pedagogical reasons, there are a few places for you to fill in your own code in order to make the notebook fully functional. These are delineated with the dashed lines as follows, and you should **only change what's inside**. You don't have to edit the text or code anywhere else. I've also included \"**TODO**\" to separate the background context from the actual instructions.\n",
     "```python\n",
     "# ---------------------- #\n",
     "# YOUR CODE HERE\n",
     "\n",
     "# ---------------------- #\n",
     "```\n",
-    "To execute each cell of the notebook and automatically advance to the next cell, press `Shift+Enter`. If you edit the code in a cell, just press `Shift+Enter` to run it again. You have to execute **all** the code cells in this notebook from top to bottom (so don't skip around). A number `[#]` will appear to the left of the code cell once it's done executing."
+    "To execute each cell of the notebook and automatically advance to the next cell, press `Shift+Enter`. If you edit the code in a cell, just press `Shift+Enter` to run it again. You have to execute **all** the code cells in this notebook in order from top to bottom (so don't skip around). A number `[#]` will appear to the left of the code cell once it's done executing.\n",
+    "\n",
+    "When done successfully, you'll be able to generate a table with all the relevant calculations at the end."
    ]
   },
   {
@@ -169,11 +174,15 @@
     "We will try to do this in a very principled fashion. \n",
     "\n",
     "#### 3.1 Theta\n",
-    "First, we need to get the $\\theta$ values. We can do this by creating a new column in the DataFrame whose entries are computed by dividing the existing column of $2\\theta$ values by 2. The syntax for selecting a column in the DataFrame is by using its name as follows:\n",
+    "First, we need to get the $\\theta$ values. We can do this by creating a new column in the DataFrame whose entries are computed by dividing the existing column of $2\\theta$ values by 2. The syntax for selecting an existing column in the DataFrame is by using its name as follows:\n",
     "```python\n",
     "df['2Theta']\n",
     "```\n",
-    "To perform division, we can type `/ 2` after the column and store the result into a new `'Theta'` column in the DataFrame. \n",
+    "To perform division, we can type `/ 2` after the column and store the result into a new `'Theta'` column in the DataFrame. By writing \n",
+    "```python\n",
+    "df['Theta']\n",
+    "```\n",
+    "on the left-hand side of the `=` sign, we're automatically creating a new column that we're about to assign values to.\n",
     "\n",
     "**TODO**: Finish the right-hand side of the code below."
    ]
@@ -196,7 +205,7 @@
    "metadata": {},
    "source": [
     "#### 3.2 Sine\n",
-    "Next, we'll compute the sine of the angle using a function from the NumPy library. Specifically, it is the `np.sin()` function, whose argument inside the parentheses **must be in radians**. If you apply the function on an array of values, it will know to evaluate the sine of each element individually. Fortunately, there is also a `np.radians()` function that will convert an array from degrees to radians for us. \n",
+    "Next, we'll compute the sine of the $\\theta$ values using a function from the NumPy library. Specifically, it is the `np.sin()` function, whose argument inside the parentheses **must be in radians**. If you apply the function on an array of values, it will know to evaluate the sine of each element individually. Fortunately, there is also a `np.radians()` function that will convert an array from degrees to radians for us. \n",
     "\n",
     "**TODO**: Write one line of code to add a column named `'Sine'` to your DataFrame. Your code should resembles the following, where you'll have to fill in the blank with the appropriate column from your existing DataFrame.\n",
     "```python\n",
@@ -247,7 +256,7 @@
     "#### 3.4 Take the ratio\n",
     "At this point, you know to take the ratio between the first distance and each distance measured. However, I think there's a small \"hack\" to this. If you do it naively, you'll get numbers like `1.000`, `1.414`, `1.732`, and the like. Unless you know your square root approximations, this can be tricky to decipher. I prefer to **square** the distances first, and then take the ratio. I've done the first part below and stored the squared distances into a sixth column. \n",
     "\n",
-    "**TODO**: Now you have to create a new column called `'Ratio'` whose values are *the first element* of `'Distance^2'` divided by the entire column `'Distance^2'`. The pandas syntax to access the first element in a column is\n",
+    "**TODO**: Now you have to create a new column called `'Ratio'` whose values are *the first element* of `'Distance^2'` divided by *the entire column* `'Distance^2'`. The pandas syntax to access the first element in a column is\n",
     "```python\n",
     "df['Distance^2'][0]\n",
     "```\n",
