--- a/mse/XRD_trends.ipynb
+++ b/mse/XRD_trends.ipynb
@@ -4,19 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# X-ray diffraction (XRD) interactive plot\n",
+    "# X-ray diffraction (XRD) spectra trends\n",
     "\n",
     "*Author: Enze Chen (University of California, Berkeley)*\n",
     "\n",
     "This is an interactive notebook for playing around with some experimental parameters ($a$, $\\lambda$, $T$, etc.) and observing the effect on the resulting XRD spectra. I find XRD to be a particularly beautiful subject and I couldn't find any similar visualizations online. I hope this interactive demo will help you learn the _qualitative trends_ associated with powder XRD spectra. The actual numbers (e.g. intensities) should be taken with a grain of salt, but you can sift through the code and see that everything you've learned really is enough to produce a spectra!\n",
     "\n",
-    "## Usage\n",
+    "## How to run this notebook\n",
     "\n",
-    "To use this notebook, run all the cells (`Run All` in the menu or `Shift+Enter` for every cell) and then adjust the widgets at the very end. Please don't hesitate to reach out if you have any questions or ideas to contribute.\n",
+    "If you are viewing this notebook on [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb), then all the software is already set up for you (hooray). If you want to run the notebook locally, make sure all the Python libraries in the [`requirements.txt`](https://github.com/enze-chen/learning_modules/blob/master/requirements.txt) file are installed.\n",
+    "\n",
+    "To run this notebook, run all the cells (`Run All` in the menu or `Shift+Enter` for every cell) and then adjust the widgets at the very end. Click `Generate Plot` each time you change a setting.\n",
     "\n",
     "## Acknowledgements\n",
     "\n",
-    "I thank Nathan Bieberdorf for user testing and helpful suggestions. I also thank [Prof. Andrew Minor](https://mse.berkeley.edu/people_new/minor/) for teaching MATSCI 204: Materials Characterization and my advisor [Prof. Mark Asta](https://mse.berkeley.edu/people_new/asta/) for his unwavering encouragement for my education-related pursuits. Interactivity is enabled with the [`ipywidgets`](https://ipywidgets.readthedocs.io/en/stable/) library. You can view an interactive version at [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_widget.ipynb) or the `xrdinteract` tool on [nanoHUB](https://nanohub.org/tools/xrdinteract/)."
+    "I thank Nathan Bieberdorf and Han-Ming Hau for user testing and helpful suggestions. I also thank [Prof. Andrew Minor](https://mse.berkeley.edu/people_new/minor/) for teaching MATSCI 204: Materials Characterization and my advisor [Prof. Mark Asta](https://mse.berkeley.edu/people_new/asta/) for his unwavering encouragement for my education-related pursuits. Interactivity is enabled with the [`ipywidgets`](https://ipywidgets.readthedocs.io/en/stable/) library. You can view an interactive version at [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb) or the `xrdinteract` tool on [nanoHUB](https://nanohub.org/tools/xrdinteract/)."
    ]
   },
   {
@@ -64,7 +66,7 @@
     "\n",
     "* For the structure factor, I greatly oversimplified the construction of the atomic scattering factor and selected some numbers that more or less came from the data for iron since it has both BCC and FCC structures.\n",
     "* I also combined part of the Temperature factor into the structure factor. \n",
-    "* I assumed uniform strain with a positive thermal expansion coefficient.\n",
+    "* For thermal strains, I assumed uniform strain with a positive thermal expansion coefficient.\n",
     "* I combined the Lorentz and Polarization factors, as is commonly done in the literature.\n",
     "* Like any good computationalist (jk), I threw out most constant factors. Therefore, I ignored the absorption factor since it is more or less independent of $\\theta$.\n",
     "* I used a $\\sqrt[3]{\\theta}$ term to approximate the thermal background's general shape. I don't know the actual dependence, if there is one.\n",
@@ -153,7 +155,7 @@
     "\n",
     "    # Convert planes to theta values (see equation above)\n",
     "    s_vals = np.array([np.linalg.norm(p) for p in planes])\n",
-    "    a += 3.5e-5 * T  # thermal expansion estimate\n",
+    "    a += 3.5e-5 * T  # thermal expansion estimate for thermal strains\n",
     "    theta = np.arcsin(np.divide(wavelength/2, np.divide(a, s_vals)))\n",
     "    two_theta = 2 * np.degrees(theta)\n",
     "\n",
@@ -267,7 +269,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8eac132c77af4b10bcd55510e5c53d2d",
+       "model_id": "2c6104c0ba4e46548b50ae2ec33bffeb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -289,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can you rationalize the trends you see?\n",
+    "Can you rationalize the trends you see? Note that you can account for *isotropic* mechanical strain by adjusting the lattice constant. What would happen to the spectra if the strain was anisotropic?\n",
     "\n",
     "## Known issues\n",
     "\n",
@@ -297,7 +299,7 @@
     "* There's a weird rendering error where for large intensities the upper limit (e.g. `1e6`) appears on the y-axis. **:shrug:**\n",
     "\n",
     "## Conclusion\n",
-    "I hope you found this notebook helpful in learning more about XRD and what affects a powder XRD spectra."
+    "I hope you found this notebook helpful in learning more about XRD and what affects a powder XRD spectra. Please don't hesitate to reach out if you have any questions or ideas to contribute."
    ]
   }
  ],
