--- a/mse/XRD_trends.ipynb
+++ b/mse/XRD_trends.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "*Author: Enze Chen (University of California, Berkeley)*\n",
     "\n",
+    "![Powder XRD spectra](https://raw.githubusercontent.com/enze-chen/learning_modules/master/fig/XRD_labeled.png)\n",
+    "\n",
     "This is an interactive notebook for playing around with some experimental parameters ($a$, $\\lambda$, $T$, etc.) and observing the effect on the resulting XRD spectra. I find XRD to be a particularly beautiful subject and I couldn't find any similar visualizations online. I hope this interactive demo will help you learn the _qualitative trends_ associated with powder XRD spectra. The actual numbers (e.g. intensities) should be taken with a grain of salt, but you can sift through the code and see that everything you've learned really is enough to produce a spectra!\n",
     "\n",
     "## How to run this notebook\n",
