--- a/mse/XRD_indexing.ipynb
+++ b/mse/XRD_indexing.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "![Powder XRD spectra](https://raw.githubusercontent.com/enze-chen/learning_modules/master/fig/XRD_unlabeled.png)\n",
     "\n",
-    "This Jupyter notebook is meant expose MSE students *with little to no Python experience* to a programmatic way of indexing a XRD spectra. It walks through the process step-by-step, so I apologize if it appears quite long. I tried to include ample explanations for the scientific computing techniques and how they relate to math and MSE concepts they might otherwise be more familiar with. If you already know another language like MATLAB or R, you should see some similarities.\n",
+    "This Jupyter notebook is meant expose MSE students *with little to no Python experience* to a programmatic way of indexing a XRD spectra. It walks through the process step-by-step, so I apologize if it appears quite long. I tried to include ample explanations for the scientific computing techniques and how they relate to math and MSE concepts they might otherwise be more familiar with. If you already know another language like MATLAB or R, you should see some similarities. At the end, your results will be shown in a table, not on a spectra like the image above.\n",
     "\n",
     "## How to run this notebook\n",
     "\n",
