removed wavelength column from XRD data

--- a/mse/XRD_indexing.ipynb
+++ b/mse/XRD_indexing.ipynb
@@ -109,7 +109,9 @@
     "```python\n",
     "angles = [1.23, 4.56, 7.89]  \n",
     "```\n",
-    "for however many $2\\theta$ values you've measured. Don't forget to execute the code cell (`Shift+Enter`) when you're done."
+    "for however many $2\\theta$ values you've measured. Don't forget to execute the code cell (`Shift+Enter`) when you're done.\n",
+    "\n",
+    "If you don't have your own data, you can use the sample data [in this file](https://github.com/enze-chen/learning_modules/blob/master/data/xrd_peaks_CuKa.csv)."
    ]
   },
   {
