added simple regular solution notebook

--- a/mse/Thermo_solution_models.ipynb
+++ b/mse/Thermo_solution_models.ipynb
@@ -35,7 +35,7 @@
     "If you edit the code in a cell, just press `Shift+Enter` to run it again. You have to execute **all** the code cells in this notebook from top to bottom (so don't skip around). A number `[#]` will appear to the left of the code cell once it's done executing. When done successfully, you'll be able to generate a lens-shaped phase diagram at the very end.\n",
     "\n",
     "## Acknowledgements\n",
-    "I thank [Prof. Gerbrand Ceder](https://mse.berkeley.edu/people_new/ceder/) for teaching MATSCI 201A: Thermodynamics and Phase Transformations in Solids and my advisor [Prof. Mark Asta](https://mse.berkeley.edu/people_new/asta/) for conceiving this idea, providing preliminary scripts and data, and encouraging me in my education-related pursuits. Interactivity is enabled with the [`ipywidgets`](https://ipywidgets.readthedocs.io/en/stable/) library. An interactive version of this notebook can be found online at [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/Thermo_solution_models.ipynb)."
+    "I thank [Prof. Gerbrand Ceder](https://mse.berkeley.edu/people_new/ceder/) for teaching MATSCI 201A: Thermodynamics and Phase Transformations in Solids and my advisor [Prof. Mark Asta](https://mse.berkeley.edu/people_new/asta/) for suggesting this notebook, providing preliminary scripts and data, and encouraging me in my education-related pursuits. Interactivity is enabled with the [`ipywidgets`](https://ipywidgets.readthedocs.io/en/stable/) library. An interactive version of this notebook can be found online at [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/Thermo_solution_models.ipynb)."
    ]
   },
   {
@@ -54,7 +54,7 @@
     "\n",
     "$$ \\Delta H_{\\text{mix}} = \\beta x(1-x) $$\n",
     "\n",
-    "and $x$ is the atomic fraction. For ideal solutions, we can simply set $\\beta = 0$. The entropy of mixing is given by\n",
+    "and $x$ is the atomic fraction of species $B$ in the $AB$ solutions. For ideal solutions, we can simply set $\\beta = 0$. The entropy of mixing is given by\n",
     "\n",
     "$$ \\Delta S_{\\text{mix}} = -R \\left[ x \\ln x + (1-x) \\ln(1-x) \\right] $$\n",
     "\n",
@@ -473,11 +473,11 @@
     "## The appearance of the miscibility gap\n",
     "But wait, there's more! By using much of the code we have already written and changing a few parameters, we can actually make a miscibility gap appear. A miscibility gap is where, below a certain critical temperature $T_c$, the single-phase solid solution will phase separate into two immiscible phases with different concentrations. In fact, many phase diagrams have both a miscibility gap and a solid+liquid region; they're usually not shown on the same plot because they're separated by a large temperature difference. This was one of many aspects of MATSCI 201A that blew my mind.\n",
     "\n",
-    "The miscibility gap arises at low temperatures in the regular solution model when the $\\beta$ parameter is large. We'll find the common tangent on the $\\Delta G^s$ curve, and the tangent points will demarcate the **solvus** surrounding the miscibility gap.\n",
+    "The miscibility gap arises at low temperatures in the regular solution model when the $\\beta$ parameter is large and $T$ is small. We'll find the common tangent on *just* the $\\Delta G^s$ curve, and the tangent points will demarcate the **solvus** surrounding the miscibility gap.\n",
     "\n",
     "**TODO**: Please finish the following code. If you were able to successfully complete the lens diagram portion, then you should find this part to be easier. Some hints are:\n",
     "* Now we just have to **compute one curve** for each $T$ in `T_misc` and find the **common tangent with itself**. \n",
-    "    * Optional: You can read the `common_tangent()` function for more information on how this is implemented. It's fairly naive.\n",
+    "    * Optional: You can read the `common_tangent()` function for more information on how this is implemented. It's fairly naive at the moment.\n",
     "* You want to add **each** tangent point (recall two indices are returned) to the `solvus` list as a **separate tuple**, in the form `(x-coord, T)`."
    ]
   },
@@ -547,7 +547,37 @@
     "--------\n",
     "\n",
     "## Conclusion\n",
-    "I hope this notebook helped you with visualizing the thermodynamics of ideal and regular solutions and gave you some Python practice. If you have any remaining questions or ideas for this and other modules, please don't hesitate to reach out."
+    "I hope this notebook helped you with visualizing the thermodynamics of ideal and regular solutions and gave you some Python practice. If you have any remaining questions or ideas for this and other modules, please don't hesitate to reach out.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus material\n",
+    "\n",
+    "And finally, if you are like undergrad-me and still not convinced that the $\\Delta G$ vs. $T$ curve corresponds to the lens phase diagram that you constructed, [maybe this animation will change your mind](https://raw.githubusercontent.com/enze-chen/learning_modules/master/fig/GT_PD_animation.gif)?\n",
+    "\n",
+    "### Answers\n",
+    "If you were really stuck, highlight the following whitespace to reveal the answers to the above blanks.\n",
+    "\n",
+    "<span style=\"color:white\">\n",
+    "// Creating the phase diagram <br>\n",
+    "for T in Ts: <br>\n",
+    "&nbsp; &nbsp; ys = curve_s(x, T) <br>\n",
+    "&nbsp; &nbsp; yl = curve_l(x, T) <br>\n",
+    "&nbsp; &nbsp; line, idmin, idmax = common_tangent(x, ys, yl, T) <br>\n",
+    "&nbsp; &nbsp; liquidus.append(x[idmax]) <br>\n",
+    "&nbsp; &nbsp; solidus.append(x[idmin]) <br>\n",
+    "     <br>\n",
+    "// Creating the miscibility gap <br>\n",
+    "for T in T_misc: <br>\n",
+    "&nbsp; &nbsp; y = curve_s(x, T) <br>\n",
+    "&nbsp; &nbsp; line, idmin, idmax = common_tangent(x, y, y, T) <br>\n",
+    "&nbsp; &nbsp; solvus.append((x[idmin], T)) <br>\n",
+    "&nbsp; &nbsp; solvus.append((x[idmax], T)) <br>\n",
+    "</span>"
    ]
   }
  ],
