touch up regular solution plot

--- a/mse/Regular_solution_plot.ipynb
+++ b/mse/Regular_solution_plot.ipynb
@@ -95,6 +95,7 @@
     "```python\n",
     "def function_name(req_arg1, req_arg2, opt_arg3=arg3_default, opt_arg4=arg4_default):\n",
     "    # Everything in the function must be indented / spaced\n",
+    "    return True   # Function doesn't necessarily have to return anything\n",
     "```\n",
     "\n",
     "It is very good practice to leave a thorough description (known as a [**docstring**](http://epydoc.sourceforge.net/manual-docstring.html). Many styles exist; I like [Google's](http://google.github.io/styleguide/pyguide.html#383-functions-and-methods)) for your readers/collaborators. Here, the docstring helps guide you as to what to put in the header and what you should return. If your variable names are different than what I suggest, that's fine. Just don't forget to update the docstring!\n",
@@ -165,18 +166,21 @@
     "\n",
     "**TODO**: To complete the code inside the `YOUR CODE HERE` section, you'll need to specify a few things.\n",
     "\n",
-    "* Temperature: Let's set it to $1500$ for good measure.\n",
+    "* Temperature: Let's set it to $1500$ for good measure, but it's honestly your call.\n",
     "\n",
     "* `x` array: If you're familiar with MATLAB, there's an analogous `linspace` function in NumPy to create evenly-spaced points. You call it with `np.linspace(lower_limit, upper_limit, integer_number_of_points)`. \n",
     "    * To avoid numerical errors, I suggest making the lower limit $0.001$ instead of $0$, and the upper limit $0.999$ instead of $1$.\n",
     "\n",
     "* `betas` array: You can pick whatever values you want, but I'd say $10000$ to $50000$ in increments of $10000$ is good to start with.\n",
     "\n",
-    "* Plotting: To plot a curve onto a set of axes, you can use the command `ax.plot(x-coords-array, y-coords-array)`\n",
-    "\n",
     "* Loop: You will probably want to use a [`for` loop](https://wiki.python.org/moin/ForLoop) for the $\\beta$ values to facilitate curve generation and plotting.\n",
     "\n",
-    "* If it's not apparent, you will have to call the function that you wrote above. If this cell errors out with a message like `\"name is not defined\"`, then you probably forgot to execute the function cell after you finished writing it.\n",
+    "* If it's not apparent, you will have to **call the function that you wrote above**. If this cell errors out with a message like `\"name 'func_name' is not defined\"`, then you probably forgot to execute the function cell after you finished writing it.\n",
+    "\n",
+    "* Plotting: There are a few parts to this.\n",
+    "    * At the start, you should **create a new set of axes** by typing `fig, ax = plt.subplots()`. This stores the set of axes in the `ax` variable. This step is analogous to a painter setting up a canvas on which they will then place their masterpiece.\n",
+    "    * To plot a curve onto a set of axes, you can use the command `ax.plot(x-coords-array, y-coords-array)`.\n",
+    "    * To plot multiple curves onto the same set of axes, just use the above command multiple times.\n",
     "\n",
     "Note: Like all problems, there are *many ways* one can complete this section. For example, you can generate all the curves first, and then plot each one onto the axes; or you can plot each one as you generate it. It's up to you!"
    ]
@@ -190,9 +194,6 @@
     "# These are matplotlib.pyplot settings; optional but helpful!\n",
     "plt.rcParams.update({'figure.figsize':(8,6), 'font.size':24, \\\n",
     "                     'lines.linewidth':5, 'axes.linewidth':2})\n",
-    "\n",
-    "# Create a blank canvas to put your plots on; REQUIRED\n",
-    "fig, ax = plt.subplots()\n",
     "\n",
     "# ---------------------- #\n",
     "# YOUR CODE HERE\n",
@@ -220,7 +221,7 @@
     "--------\n",
     "\n",
     "## Conclusion\n",
-    "I hope this notebook gave you some Python practice with the regular solution model. If you have any remaining questions or ideas for this and other modules, please don't hesitate to reach out."
+    "I hope this notebook gave you some Python practice with an application to the regular solution model. If you have any remaining questions or ideas for this and other modules, please don't hesitate to reach out."
    ]
   },
   {
@@ -242,6 +243,7 @@
     "&nbsp; &nbsp; return G_mix <br>\n",
     "     <br>\n",
     "// Generate and plot the curves <br>\n",
+    "fig, ax = plt.subplots() <br>\n",
     "x = np.linspace(0.001, 0.999, 10000) <br>\n",
     "T = 1500 <br>\n",
     "for beta in np.linspace(10000, 50000, 6): <br>\n",
