added plotting practice

--- a/mse/Thermo_solution_models.ipynb
+++ b/mse/Thermo_solution_models.ipynb
@@ -559,25 +559,8 @@
     "\n",
     "And finally, if you are like undergrad-me and still not convinced that the $\\Delta G$ vs. $T$ curve corresponds to the lens phase diagram that you constructed, [maybe this animation will change your mind](https://raw.githubusercontent.com/enze-chen/learning_modules/master/fig/GT_PD_animation.gif)?\n",
     "\n",
-    "### Answers\n",
-    "If you were really stuck, highlight the following whitespace to reveal the answers to the above blanks.\n",
-    "\n",
-    "<span style=\"color:white\">\n",
-    "// Creating the phase diagram <br>\n",
-    "for T in Ts: <br>\n",
-    "&nbsp; &nbsp; ys = curve_s(x, T) <br>\n",
-    "&nbsp; &nbsp; yl = curve_l(x, T) <br>\n",
-    "&nbsp; &nbsp; line, idmin, idmax = common_tangent(x, ys, yl, T) <br>\n",
-    "&nbsp; &nbsp; liquidus.append(x[idmax]) <br>\n",
-    "&nbsp; &nbsp; solidus.append(x[idmin]) <br>\n",
-    "     <br>\n",
-    "// Creating the miscibility gap <br>\n",
-    "for T in T_misc: <br>\n",
-    "&nbsp; &nbsp; y = curve_s(x, T) <br>\n",
-    "&nbsp; &nbsp; line, idmin, idmax = common_tangent(x, y, y, T) <br>\n",
-    "&nbsp; &nbsp; solvus.append((x[idmin], T)) <br>\n",
-    "&nbsp; &nbsp; solvus.append((x[idmax], T)) <br>\n",
-    "</span>"
+    "## Answers\n",
+    "If you found yourself stuck at certain points, I provide some sample answers [here](https://github.com/enze-chen/learning_modules/blob/master/data/answers.md#Thermo_solution_models)."
    ]
   }
  ],
