--- a/mse/XRD_indexing.ipynb
+++ b/mse/XRD_indexing.ipynb
@@ -395,7 +395,7 @@
     "Technically, the output of a powder XRD experiment is a spectra, not a set of angles. It's stored as a column of $2\\theta$ values followed by a column of $\\text{Intensity}$ values. How might code help you extract the positions of the peaks?\n",
     "\n",
     "## Answers\n",
-    "If you found yourself stuck at certain points, I provide some sample answers [here](https://github.com/enze-chen/learning_modules/blob/master/data/answers.md#XRD_trends)."
+    "If you found yourself stuck at certain points, I provide some sample answers [here](https://github.com/enze-chen/learning_modules/blob/master/data/answers.md#XRD_indexing)."
    ]
   }
  ],
