added cubic assumption

--- a/mse/XRD_indexing.ipynb
+++ b/mse/XRD_indexing.ipynb
@@ -286,11 +286,11 @@
    "metadata": {},
    "source": [
     "#### 3.5 Figure out the crystal structure and index the peaks\n",
-    "OK! At this point, the ratios should be enough for you to deduce which cubic crystal structure you have on your hands. This will allow you to index the peaks accordingly. You can probably do this by hand. \n",
+    "OK! At this point, the ratios should be enough for you to deduce which crystal structure you have on your hands. This will allow you to index the peaks accordingly. You can probably do this by hand. \n",
     "\n",
     "----------------------------------------\n",
     "\n",
-    "If you want to try it programmatically, you can read on. The following cells are completed for you, so you just have to run them, assuming you used the same variable names I suggested. There are probably smarter programmatic ways to do this, but I felt hacky, so we're going to create the following variables to store some constants."
+    "If you want to try it programmatically, you can read on. The following cells are completed for you, so you just have to run them, assuming you used the same variable names I suggested. There are probably smarter programmatic ways to do this, but I felt hacky, so we're going to create the following variables to store some constants. Note that *I'm assuming your system is cubic*."
    ]
   },
   {
