updated XRD figure

--- a/mse/Regular_solution_plot.ipynb
+++ b/mse/Regular_solution_plot.ipynb
@@ -91,7 +91,7 @@
     "Here you will write **a Python function** that will calculate and **return** $\\Delta G$ given a set of inputs. Recall that Python functions take on the following structure for the header:\n",
     "```python\n",
     "def function_name(req_arg1, req_arg2, opt_arg3=arg3_default, opt_arg4=arg4_default):\n",
-    "    # Everything in the function must be indented / spaced\n",
+    "    # Everything in the function must be indented / spaced by a consistent amount\n",
     "    return True   # Note: A function doesn't necessarily have to return anything\n",
     "```\n",
     "\n",
@@ -105,7 +105,7 @@
     "* You can multiply a scalar to a NumPy array with the `*` operator as usual.\n",
     "* **Don't forget** to actually write `return final_variable_or_value` on the last line or Python won't know to do so.\n",
     "* **Don't forget** to run the cell with `Shift+Enter` when you've finished coding so later cells recognize this function's existence.\n",
-    "* The ideal gas constant $R = 8.314$ J/(mol$\\cdot$K)"
+    "* The ideal gas constant $R = 8.314$ J/(mol$\\cdot$K)."
    ]
   },
   {
