--- a/mse/Thermo_solution_models.ipynb
+++ b/mse/Thermo_solution_models.ipynb
@@ -478,7 +478,7 @@
     "**TODO**: Please finish the following code. If you were able to successfully complete the lens diagram portion, then you should find this part to be easier. Some hints are:\n",
     "* Now we just have to **compute one curve** for each $T$ in `T_misc` and find the **common tangent with itself**. \n",
     "    * Optional: You can read the `common_tangent()` function for more information on how this is implemented. It's fairly naive at the moment.\n",
-    "* You want to add **each** tangent point (recall two indices are returned) to the `solvus` list as a **separate tuple**, in the form `(x-coord, T)`."
+    "* You want to add **each** tangent point (recall two indices are returned) to the `solvus` list as a **separate tuple**, with the command `solvus.append((x-coord, T))`. Note the double parentheses: Outer ones are for `append()` and inner ones are for the tuple itself."
    ]
   },
   {
